--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# These individuals contributed to the hbnb project in this repository 
+# People that contributed to this project
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Suara Ayomide <aysuarex@gmail.com>
+Bamidele Adefolaju <bamideleadefolaju@gmail.com>
